@@ -1,3 +1,12 @@
+2002-11-21  Richard Williamson   <rjw@apple.com>
+
+        Fixed from SK's copy/paste whitespace issue.
+        This fixes 3076236 and a regression due to additional whitespace
+        in the DOM.
+        
+        * kwq/WebCoreBridge.mm:
+        (attributedString):
+
 === Alexander-33 ===
 
 2002-11-21  David Hyatt  <hyatt@apple.com>
